--- a/newsnews/src/index.css
+++ b/newsnews/src/index.css
@@ -1,13 +1,141 @@
-body {
+ @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;500&display=swap');
+
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-bg: #3C1B43;
+  --color-bg-variant: #501537;
+  --color-primary:#922D50;
+  --color-primary-variant: #B8C480;
+  --color-white:#fff;
+  --color-light:#D4E79E;
+
+  --conteiner-width-lg:75%;
+  --container-width-md:86%;
+  --container-width-sm:90%;
+
+  --transition:all 400ms ease;
+}
+
+html {
+  scroll-behavior: smooth;
+  
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+body{
+font-family: 'Roboto Mono', monospace;
+  background: var(--color-bg);
+  line-height: 1.7;
+  color: var(--color-white);
+  
+}
+
+/*============== GENERAL STYLES =================== */
+
+.container {
+  width: var(--conteiner-width-lg);
+  margin: 0 auto;
+
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+section{
+  margin-top: 8rem;
+}
+
+section > h2, section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+
+section > h2 {
+  color: var(--color-primary);
+  margin-bottom: 3rem;
+}
+
+.text-light {
+  color: var(--color-light);
+}
+
+a {
+  color: var(--color-primary);
+  transition: var(--transition);
+  
+}
+
+a:hover{
+  color: var(--color-white);
+}
+
+.btn {
+  width: max-content;
+  display: inline-block;
+  font-size: 14px;
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem ;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
+}
+
+.btn:hoover{
+  background: var(--color-white);
+  color: var(--color-bg);
+  border: transparent;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-bg);
+
+}
+img{
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  width: 100px;
+}
+
+/*==================== MEDIA QUERIES (MEDIUM DEVICES)===================== */
+
+@media screen and (max-width: 1024px){
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+}
+
+
+/*==================== MEDIA QUERIES (SMALL DEVICES)===================== */
+
+@media screen and (max-width: 600px){
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+  }
 }
